// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`gridfinityUtils - Snapshot Tests > Common drawer sizes > should match snapshot for IKEA MAXIMERA large 1`] = `
{
  "baseplates": {
    "5x2": 1,
    "5x6": 1,
    "6x2": 1,
    "6x6": 1,
  },
  "halfSizeBins": {},
  "layout": [
    {
      "height": 6,
      "pixelHeight": 252,
      "pixelWidth": 252,
      "pixelX": 0,
      "pixelY": 0,
      "type": "baseplate",
      "width": 6,
      "x": 0,
      "y": 0,
    },
    {
      "height": 6,
      "pixelHeight": 252,
      "pixelWidth": 210,
      "pixelX": 252,
      "pixelY": 0,
      "type": "baseplate",
      "width": 5,
      "x": 6,
      "y": 0,
    },
    {
      "height": 2,
      "pixelHeight": 84,
      "pixelWidth": 252,
      "pixelX": 0,
      "pixelY": 252,
      "type": "baseplate",
      "width": 6,
      "x": 0,
      "y": 6,
    },
    {
      "height": 2,
      "pixelHeight": 84,
      "pixelWidth": 210,
      "pixelX": 252,
      "pixelY": 252,
      "type": "baseplate",
      "width": 5,
      "x": 6,
      "y": 6,
    },
    {
      "height": 6,
      "pixelHeight": 252,
      "pixelWidth": 38,
      "pixelX": 462,
      "pixelY": 0,
      "type": "spacer",
      "width": 0.9,
      "x": 11,
      "y": 0,
    },
    {
      "height": 2,
      "pixelHeight": 84,
      "pixelWidth": 38,
      "pixelX": 462,
      "pixelY": 252,
      "type": "spacer",
      "width": 0.9,
      "x": 11,
      "y": 0,
    },
    {
      "height": 0.81,
      "pixelHeight": 34,
      "pixelWidth": 252,
      "pixelX": 0,
      "pixelY": 336,
      "type": "spacer",
      "width": 6,
      "x": 0,
      "y": 8,
    },
    {
      "height": 0.81,
      "pixelHeight": 34,
      "pixelWidth": 210,
      "pixelX": 252,
      "pixelY": 336,
      "type": "spacer",
      "width": 5,
      "x": 0,
      "y": 8,
    },
    {
      "height": 0.81,
      "pixelHeight": 34,
      "pixelWidth": 38,
      "pixelX": 462,
      "pixelY": 336,
      "type": "spacer",
      "width": 0.9,
      "x": 11,
      "y": 8,
    },
  ],
  "spacers": {
    "210mm x 34.02mm": 1,
    "252mm x 34.02mm": 1,
    "37.8mm x 252mm": 1,
    "37.8mm x 34.02mm": 1,
    "37.8mm x 84mm": 1,
  },
}
`;

exports[`gridfinityUtils - Snapshot Tests > Common drawer sizes > should match snapshot for IKEA MAXIMERA medium 1`] = `
{
  "baseplates": {
    "3x2": 1,
    "3x6": 1,
    "6x2": 1,
    "6x6": 1,
  },
  "halfSizeBins": {},
  "layout": [
    {
      "height": 6,
      "pixelHeight": 252,
      "pixelWidth": 252,
      "pixelX": 0,
      "pixelY": 0,
      "type": "baseplate",
      "width": 6,
      "x": 0,
      "y": 0,
    },
    {
      "height": 6,
      "pixelHeight": 252,
      "pixelWidth": 126,
      "pixelX": 252,
      "pixelY": 0,
      "type": "baseplate",
      "width": 3,
      "x": 6,
      "y": 0,
    },
    {
      "height": 2,
      "pixelHeight": 84,
      "pixelWidth": 252,
      "pixelX": 0,
      "pixelY": 252,
      "type": "baseplate",
      "width": 6,
      "x": 0,
      "y": 6,
    },
    {
      "height": 2,
      "pixelHeight": 84,
      "pixelWidth": 126,
      "pixelX": 252,
      "pixelY": 252,
      "type": "baseplate",
      "width": 3,
      "x": 6,
      "y": 6,
    },
    {
      "height": 6,
      "pixelHeight": 252,
      "pixelWidth": 22,
      "pixelX": 378,
      "pixelY": 0,
      "type": "spacer",
      "width": 0.52,
      "x": 9,
      "y": 0,
    },
    {
      "height": 2,
      "pixelHeight": 84,
      "pixelWidth": 22,
      "pixelX": 378,
      "pixelY": 252,
      "type": "spacer",
      "width": 0.52,
      "x": 9,
      "y": 0,
    },
    {
      "height": 0.81,
      "pixelHeight": 34,
      "pixelWidth": 252,
      "pixelX": 0,
      "pixelY": 336,
      "type": "spacer",
      "width": 6,
      "x": 0,
      "y": 8,
    },
    {
      "height": 0.81,
      "pixelHeight": 34,
      "pixelWidth": 126,
      "pixelX": 252,
      "pixelY": 336,
      "type": "spacer",
      "width": 3,
      "x": 0,
      "y": 8,
    },
    {
      "height": 0.81,
      "pixelHeight": 34,
      "pixelWidth": 22,
      "pixelX": 378,
      "pixelY": 336,
      "type": "spacer",
      "width": 0.52,
      "x": 9,
      "y": 8,
    },
  ],
  "spacers": {
    "126mm x 34.02mm": 1,
    "21.84mm x 252mm": 1,
    "21.84mm x 34.02mm": 1,
    "21.84mm x 84mm": 1,
    "252mm x 34.02mm": 1,
  },
}
`;

exports[`gridfinityUtils - Snapshot Tests > Common drawer sizes > should match snapshot for IKEA MAXIMERA small 1`] = `
{
  "baseplates": {
    "1x2": 1,
    "1x6": 1,
    "6x2": 1,
    "6x6": 1,
  },
  "halfSizeBins": {},
  "layout": [
    {
      "height": 6,
      "pixelHeight": 252,
      "pixelWidth": 252,
      "pixelX": 0,
      "pixelY": 0,
      "type": "baseplate",
      "width": 6,
      "x": 0,
      "y": 0,
    },
    {
      "height": 6,
      "pixelHeight": 252,
      "pixelWidth": 42,
      "pixelX": 252,
      "pixelY": 0,
      "type": "baseplate",
      "width": 1,
      "x": 6,
      "y": 0,
    },
    {
      "height": 2,
      "pixelHeight": 84,
      "pixelWidth": 252,
      "pixelX": 0,
      "pixelY": 252,
      "type": "baseplate",
      "width": 6,
      "x": 0,
      "y": 6,
    },
    {
      "height": 2,
      "pixelHeight": 84,
      "pixelWidth": 42,
      "pixelX": 252,
      "pixelY": 252,
      "type": "baseplate",
      "width": 1,
      "x": 6,
      "y": 6,
    },
    {
      "height": 6,
      "pixelHeight": 252,
      "pixelWidth": 6,
      "pixelX": 294,
      "pixelY": 0,
      "type": "spacer",
      "width": 0.14,
      "x": 7,
      "y": 0,
    },
    {
      "height": 2,
      "pixelHeight": 84,
      "pixelWidth": 6,
      "pixelX": 294,
      "pixelY": 252,
      "type": "spacer",
      "width": 0.14,
      "x": 7,
      "y": 0,
    },
    {
      "height": 0.81,
      "pixelHeight": 34,
      "pixelWidth": 252,
      "pixelX": 0,
      "pixelY": 336,
      "type": "spacer",
      "width": 6,
      "x": 0,
      "y": 8,
    },
    {
      "height": 0.81,
      "pixelHeight": 34,
      "pixelWidth": 42,
      "pixelX": 252,
      "pixelY": 336,
      "type": "spacer",
      "width": 1,
      "x": 0,
      "y": 8,
    },
    {
      "height": 0.81,
      "pixelHeight": 34,
      "pixelWidth": 6,
      "pixelX": 294,
      "pixelY": 336,
      "type": "spacer",
      "width": 0.14,
      "x": 7,
      "y": 8,
    },
  ],
  "spacers": {
    "252mm x 34.02mm": 1,
    "42mm x 34.02mm": 1,
    "5.88mm x 252mm": 1,
    "5.88mm x 34.02mm": 1,
    "5.88mm x 84mm": 1,
  },
}
`;

exports[`gridfinityUtils - Snapshot Tests > Common drawer sizes > should match snapshot for Toolbox drawer 1`] = `
{
  "baseplates": {
    "4x1": 1,
    "4x6": 1,
    "6x1": 1,
    "6x6": 1,
  },
  "halfSizeBins": {},
  "layout": [
    {
      "height": 6,
      "pixelHeight": 252,
      "pixelWidth": 252,
      "pixelX": 0,
      "pixelY": 0,
      "type": "baseplate",
      "width": 6,
      "x": 0,
      "y": 0,
    },
    {
      "height": 6,
      "pixelHeight": 252,
      "pixelWidth": 168,
      "pixelX": 252,
      "pixelY": 0,
      "type": "baseplate",
      "width": 4,
      "x": 6,
      "y": 0,
    },
    {
      "height": 1,
      "pixelHeight": 42,
      "pixelWidth": 252,
      "pixelX": 0,
      "pixelY": 252,
      "type": "baseplate",
      "width": 6,
      "x": 0,
      "y": 6,
    },
    {
      "height": 1,
      "pixelHeight": 42,
      "pixelWidth": 168,
      "pixelX": 252,
      "pixelY": 252,
      "type": "baseplate",
      "width": 4,
      "x": 6,
      "y": 6,
    },
    {
      "height": 6,
      "pixelHeight": 252,
      "pixelWidth": 37.2,
      "pixelX": 420,
      "pixelY": 0,
      "type": "spacer",
      "width": 0.89,
      "x": 10,
      "y": 0,
    },
    {
      "height": 1,
      "pixelHeight": 42,
      "pixelWidth": 37.2,
      "pixelX": 420,
      "pixelY": 252,
      "type": "spacer",
      "width": 0.89,
      "x": 10,
      "y": 0,
    },
    {
      "height": 0.26,
      "pixelHeight": 10.8,
      "pixelWidth": 252,
      "pixelX": 0,
      "pixelY": 294,
      "type": "spacer",
      "width": 6,
      "x": 0,
      "y": 7,
    },
    {
      "height": 0.26,
      "pixelHeight": 10.8,
      "pixelWidth": 168,
      "pixelX": 252,
      "pixelY": 294,
      "type": "spacer",
      "width": 4,
      "x": 0,
      "y": 7,
    },
    {
      "height": 0.26,
      "pixelHeight": 10.8,
      "pixelWidth": 37.2,
      "pixelX": 420,
      "pixelY": 294,
      "type": "spacer",
      "width": 0.89,
      "x": 10,
      "y": 7,
    },
  ],
  "spacers": {
    "168mm x 10.92mm": 1,
    "252mm x 10.92mm": 1,
    "37.38mm x 10.92mm": 1,
    "37.38mm x 252mm": 1,
    "37.38mm x 42mm": 1,
  },
}
`;

exports[`gridfinityUtils - Snapshot Tests > Common drawer sizes > should match snapshot for US Desk drawer 1`] = `
{
  "baseplates": {
    "2x6": 1,
    "6x6": 1,
  },
  "halfSizeBins": {},
  "layout": [
    {
      "height": 6,
      "pixelHeight": 252,
      "pixelWidth": 252,
      "pixelX": 0,
      "pixelY": 0,
      "type": "baseplate",
      "width": 6,
      "x": 0,
      "y": 0,
    },
    {
      "height": 6,
      "pixelHeight": 252,
      "pixelWidth": 84,
      "pixelX": 252,
      "pixelY": 0,
      "type": "baseplate",
      "width": 2,
      "x": 6,
      "y": 0,
    },
    {
      "height": 6,
      "pixelHeight": 252,
      "pixelWidth": 19.6,
      "pixelX": 336,
      "pixelY": 0,
      "type": "spacer",
      "width": 0.47,
      "x": 8,
      "y": 0,
    },
    {
      "height": 0.05,
      "pixelHeight": 2,
      "pixelWidth": 252,
      "pixelX": 0,
      "pixelY": 252,
      "type": "spacer",
      "width": 6,
      "x": 0,
      "y": 6,
    },
    {
      "height": 0.05,
      "pixelHeight": 2,
      "pixelWidth": 84,
      "pixelX": 252,
      "pixelY": 252,
      "type": "spacer",
      "width": 2,
      "x": 0,
      "y": 6,
    },
    {
      "height": 0.05,
      "pixelHeight": 2,
      "pixelWidth": 19.6,
      "pixelX": 336,
      "pixelY": 252,
      "type": "spacer",
      "width": 0.47,
      "x": 8,
      "y": 6,
    },
  ],
  "spacers": {
    "19.74mm x 2.1mm": 1,
    "19.74mm x 252mm": 1,
    "252mm x 2.1mm": 1,
    "84mm x 2.1mm": 1,
  },
}
`;

exports[`gridfinityUtils - Snapshot Tests > Common drawer sizes > should match snapshot for US Kitchen standard 1`] = `
{
  "baseplates": {
    "1x6": 2,
    "6x6": 4,
  },
  "halfSizeBins": {},
  "layout": [
    {
      "height": 6,
      "pixelHeight": 252,
      "pixelWidth": 252,
      "pixelX": 0,
      "pixelY": 0,
      "type": "baseplate",
      "width": 6,
      "x": 0,
      "y": 0,
    },
    {
      "height": 6,
      "pixelHeight": 252,
      "pixelWidth": 252,
      "pixelX": 252,
      "pixelY": 0,
      "type": "baseplate",
      "width": 6,
      "x": 6,
      "y": 0,
    },
    {
      "height": 6,
      "pixelHeight": 252,
      "pixelWidth": 42,
      "pixelX": 504,
      "pixelY": 0,
      "type": "baseplate",
      "width": 1,
      "x": 12,
      "y": 0,
    },
    {
      "height": 6,
      "pixelHeight": 252,
      "pixelWidth": 252,
      "pixelX": 0,
      "pixelY": 252,
      "type": "baseplate",
      "width": 6,
      "x": 0,
      "y": 6,
    },
    {
      "height": 6,
      "pixelHeight": 252,
      "pixelWidth": 252,
      "pixelX": 252,
      "pixelY": 252,
      "type": "baseplate",
      "width": 6,
      "x": 6,
      "y": 6,
    },
    {
      "height": 6,
      "pixelHeight": 252,
      "pixelWidth": 42,
      "pixelX": 504,
      "pixelY": 252,
      "type": "baseplate",
      "width": 1,
      "x": 12,
      "y": 6,
    },
    {
      "height": 6,
      "pixelHeight": 252,
      "pixelWidth": 12.8,
      "pixelX": 546,
      "pixelY": 0,
      "type": "spacer",
      "width": 0.3,
      "x": 13,
      "y": 0,
    },
    {
      "height": 6,
      "pixelHeight": 252,
      "pixelWidth": 12.8,
      "pixelX": 546,
      "pixelY": 252,
      "type": "spacer",
      "width": 0.3,
      "x": 13,
      "y": 0,
    },
    {
      "height": 0.1,
      "pixelHeight": 4,
      "pixelWidth": 252,
      "pixelX": 0,
      "pixelY": 504,
      "type": "spacer",
      "width": 6,
      "x": 0,
      "y": 12,
    },
    {
      "height": 0.1,
      "pixelHeight": 4,
      "pixelWidth": 252,
      "pixelX": 252,
      "pixelY": 504,
      "type": "spacer",
      "width": 6,
      "x": 0,
      "y": 12,
    },
    {
      "height": 0.1,
      "pixelHeight": 4,
      "pixelWidth": 42,
      "pixelX": 504,
      "pixelY": 504,
      "type": "spacer",
      "width": 1,
      "x": 0,
      "y": 12,
    },
    {
      "height": 0.1,
      "pixelHeight": 4,
      "pixelWidth": 12.8,
      "pixelX": 546,
      "pixelY": 504,
      "type": "spacer",
      "width": 0.3,
      "x": 13,
      "y": 12,
    },
  ],
  "spacers": {
    "12.6mm x 252mm": 2,
    "12.6mm x 4.2mm": 1,
    "252mm x 4.2mm": 2,
    "42mm x 4.2mm": 1,
  },
}
`;

exports[`gridfinityUtils - Snapshot Tests > Common printer sizes > should match snapshot for Bambu Lab A1 1`] = `
{
  "baseplates": {
    "1x6": 1,
    "6x6": 1,
  },
  "halfSizeBins": {},
  "layout": [
    {
      "height": 6,
      "pixelHeight": 252,
      "pixelWidth": 252,
      "pixelX": 0,
      "pixelY": 0,
      "type": "baseplate",
      "width": 6,
      "x": 0,
      "y": 0,
    },
    {
      "height": 6,
      "pixelHeight": 252,
      "pixelWidth": 42,
      "pixelX": 252,
      "pixelY": 0,
      "type": "baseplate",
      "width": 1,
      "x": 6,
      "y": 0,
    },
    {
      "height": 6,
      "pixelHeight": 252,
      "pixelWidth": 10.8,
      "pixelX": 294,
      "pixelY": 0,
      "type": "spacer",
      "width": 0.26,
      "x": 7,
      "y": 0,
    },
    {
      "height": 0.05,
      "pixelHeight": 2,
      "pixelWidth": 252,
      "pixelX": 0,
      "pixelY": 252,
      "type": "spacer",
      "width": 6,
      "x": 0,
      "y": 6,
    },
    {
      "height": 0.05,
      "pixelHeight": 2,
      "pixelWidth": 42,
      "pixelX": 252,
      "pixelY": 252,
      "type": "spacer",
      "width": 1,
      "x": 0,
      "y": 6,
    },
    {
      "height": 0.05,
      "pixelHeight": 2,
      "pixelWidth": 10.8,
      "pixelX": 294,
      "pixelY": 252,
      "type": "spacer",
      "width": 0.26,
      "x": 7,
      "y": 6,
    },
  ],
  "spacers": {
    "10.92mm x 2.1mm": 1,
    "10.92mm x 252mm": 1,
    "252mm x 2.1mm": 1,
    "42mm x 2.1mm": 1,
  },
}
`;

exports[`gridfinityUtils - Snapshot Tests > Common printer sizes > should match snapshot for Ender 3 1`] = `
{
  "baseplates": {
    "2x1": 1,
    "2x5": 1,
    "5x1": 1,
    "5x5": 1,
  },
  "halfSizeBins": {},
  "layout": [
    {
      "height": 5,
      "pixelHeight": 210,
      "pixelWidth": 210,
      "pixelX": 0,
      "pixelY": 0,
      "type": "baseplate",
      "width": 5,
      "x": 0,
      "y": 0,
    },
    {
      "height": 5,
      "pixelHeight": 210,
      "pixelWidth": 84,
      "pixelX": 210,
      "pixelY": 0,
      "type": "baseplate",
      "width": 2,
      "x": 5,
      "y": 0,
    },
    {
      "height": 1,
      "pixelHeight": 42,
      "pixelWidth": 210,
      "pixelX": 0,
      "pixelY": 210,
      "type": "baseplate",
      "width": 5,
      "x": 0,
      "y": 5,
    },
    {
      "height": 1,
      "pixelHeight": 42,
      "pixelWidth": 84,
      "pixelX": 210,
      "pixelY": 210,
      "type": "baseplate",
      "width": 2,
      "x": 5,
      "y": 5,
    },
    {
      "height": 5,
      "pixelHeight": 210,
      "pixelWidth": 10.8,
      "pixelX": 294,
      "pixelY": 0,
      "type": "spacer",
      "width": 0.26,
      "x": 7,
      "y": 0,
    },
    {
      "height": 1,
      "pixelHeight": 42,
      "pixelWidth": 10.8,
      "pixelX": 294,
      "pixelY": 210,
      "type": "spacer",
      "width": 0.26,
      "x": 7,
      "y": 0,
    },
    {
      "height": 0.05,
      "pixelHeight": 2,
      "pixelWidth": 210,
      "pixelX": 0,
      "pixelY": 252,
      "type": "spacer",
      "width": 5,
      "x": 0,
      "y": 6,
    },
    {
      "height": 0.05,
      "pixelHeight": 2,
      "pixelWidth": 84,
      "pixelX": 210,
      "pixelY": 252,
      "type": "spacer",
      "width": 2,
      "x": 0,
      "y": 6,
    },
    {
      "height": 0.05,
      "pixelHeight": 2,
      "pixelWidth": 10.8,
      "pixelX": 294,
      "pixelY": 252,
      "type": "spacer",
      "width": 0.26,
      "x": 7,
      "y": 6,
    },
  ],
  "spacers": {
    "10.92mm x 2.1mm": 1,
    "10.92mm x 210mm": 1,
    "10.92mm x 42mm": 1,
    "210mm x 2.1mm": 1,
    "84mm x 2.1mm": 1,
  },
}
`;

exports[`gridfinityUtils - Snapshot Tests > Common printer sizes > should match snapshot for Prusa MK3S+ 1`] = `
{
  "baseplates": {
    "2x1": 1,
    "2x5": 1,
    "5x1": 1,
    "5x5": 1,
  },
  "halfSizeBins": {},
  "layout": [
    {
      "height": 5,
      "pixelHeight": 210,
      "pixelWidth": 210,
      "pixelX": 0,
      "pixelY": 0,
      "type": "baseplate",
      "width": 5,
      "x": 0,
      "y": 0,
    },
    {
      "height": 5,
      "pixelHeight": 210,
      "pixelWidth": 84,
      "pixelX": 210,
      "pixelY": 0,
      "type": "baseplate",
      "width": 2,
      "x": 5,
      "y": 0,
    },
    {
      "height": 1,
      "pixelHeight": 42,
      "pixelWidth": 210,
      "pixelX": 0,
      "pixelY": 210,
      "type": "baseplate",
      "width": 5,
      "x": 0,
      "y": 5,
    },
    {
      "height": 1,
      "pixelHeight": 42,
      "pixelWidth": 84,
      "pixelX": 210,
      "pixelY": 210,
      "type": "baseplate",
      "width": 2,
      "x": 5,
      "y": 5,
    },
    {
      "height": 5,
      "pixelHeight": 210,
      "pixelWidth": 10.8,
      "pixelX": 294,
      "pixelY": 0,
      "type": "spacer",
      "width": 0.26,
      "x": 7,
      "y": 0,
    },
    {
      "height": 1,
      "pixelHeight": 42,
      "pixelWidth": 10.8,
      "pixelX": 294,
      "pixelY": 210,
      "type": "spacer",
      "width": 0.26,
      "x": 7,
      "y": 0,
    },
    {
      "height": 0.05,
      "pixelHeight": 2,
      "pixelWidth": 210,
      "pixelX": 0,
      "pixelY": 252,
      "type": "spacer",
      "width": 5,
      "x": 0,
      "y": 6,
    },
    {
      "height": 0.05,
      "pixelHeight": 2,
      "pixelWidth": 84,
      "pixelX": 210,
      "pixelY": 252,
      "type": "spacer",
      "width": 2,
      "x": 0,
      "y": 6,
    },
    {
      "height": 0.05,
      "pixelHeight": 2,
      "pixelWidth": 10.8,
      "pixelX": 294,
      "pixelY": 252,
      "type": "spacer",
      "width": 0.26,
      "x": 7,
      "y": 6,
    },
  ],
  "spacers": {
    "10.92mm x 2.1mm": 1,
    "10.92mm x 210mm": 1,
    "10.92mm x 42mm": 1,
    "210mm x 2.1mm": 1,
    "84mm x 2.1mm": 1,
  },
}
`;

exports[`gridfinityUtils - Snapshot Tests > Common printer sizes > should match snapshot for Prusa Mini 1`] = `
{
  "baseplates": {
    "3x2": 1,
    "3x4": 1,
    "4x2": 1,
    "4x4": 1,
  },
  "halfSizeBins": {},
  "layout": [
    {
      "height": 4,
      "pixelHeight": 168,
      "pixelWidth": 168,
      "pixelX": 0,
      "pixelY": 0,
      "type": "baseplate",
      "width": 4,
      "x": 0,
      "y": 0,
    },
    {
      "height": 4,
      "pixelHeight": 168,
      "pixelWidth": 126,
      "pixelX": 168,
      "pixelY": 0,
      "type": "baseplate",
      "width": 3,
      "x": 4,
      "y": 0,
    },
    {
      "height": 2,
      "pixelHeight": 84,
      "pixelWidth": 168,
      "pixelX": 0,
      "pixelY": 168,
      "type": "baseplate",
      "width": 4,
      "x": 0,
      "y": 4,
    },
    {
      "height": 2,
      "pixelHeight": 84,
      "pixelWidth": 126,
      "pixelX": 168,
      "pixelY": 168,
      "type": "baseplate",
      "width": 3,
      "x": 4,
      "y": 4,
    },
    {
      "height": 4,
      "pixelHeight": 168,
      "pixelWidth": 10.8,
      "pixelX": 294,
      "pixelY": 0,
      "type": "spacer",
      "width": 0.26,
      "x": 7,
      "y": 0,
    },
    {
      "height": 2,
      "pixelHeight": 84,
      "pixelWidth": 10.8,
      "pixelX": 294,
      "pixelY": 168,
      "type": "spacer",
      "width": 0.26,
      "x": 7,
      "y": 0,
    },
    {
      "height": 0.05,
      "pixelHeight": 2,
      "pixelWidth": 168,
      "pixelX": 0,
      "pixelY": 252,
      "type": "spacer",
      "width": 4,
      "x": 0,
      "y": 6,
    },
    {
      "height": 0.05,
      "pixelHeight": 2,
      "pixelWidth": 126,
      "pixelX": 168,
      "pixelY": 252,
      "type": "spacer",
      "width": 3,
      "x": 0,
      "y": 6,
    },
    {
      "height": 0.05,
      "pixelHeight": 2,
      "pixelWidth": 10.8,
      "pixelX": 294,
      "pixelY": 252,
      "type": "spacer",
      "width": 0.26,
      "x": 7,
      "y": 6,
    },
  ],
  "spacers": {
    "10.92mm x 168mm": 1,
    "10.92mm x 2.1mm": 1,
    "10.92mm x 84mm": 1,
    "126mm x 2.1mm": 1,
    "168mm x 2.1mm": 1,
  },
}
`;

exports[`gridfinityUtils - Snapshot Tests > Common printer sizes > should match snapshot for Prusa XL 1`] = `
{
  "baseplates": {
    "7x6": 1,
  },
  "halfSizeBins": {},
  "layout": [
    {
      "height": 6,
      "pixelHeight": 252,
      "pixelWidth": 294,
      "pixelX": 0,
      "pixelY": 0,
      "type": "baseplate",
      "width": 7,
      "x": 0,
      "y": 0,
    },
    {
      "height": 6,
      "pixelHeight": 252,
      "pixelWidth": 10.8,
      "pixelX": 294,
      "pixelY": 0,
      "type": "spacer",
      "width": 0.26,
      "x": 7,
      "y": 0,
    },
    {
      "height": 0.05,
      "pixelHeight": 2,
      "pixelWidth": 294,
      "pixelX": 0,
      "pixelY": 252,
      "type": "spacer",
      "width": 7,
      "x": 0,
      "y": 6,
    },
    {
      "height": 0.05,
      "pixelHeight": 2,
      "pixelWidth": 10.8,
      "pixelX": 294,
      "pixelY": 252,
      "type": "spacer",
      "width": 0.26,
      "x": 7,
      "y": 6,
    },
  ],
  "spacers": {
    "10.92mm x 2.1mm": 1,
    "10.92mm x 252mm": 1,
    "294mm x 2.1mm": 1,
  },
}
`;

exports[`gridfinityUtils - Snapshot Tests > Standard configurations snapshots > should match snapshot for large printer 1`] = `
{
  "baseplates": {
    "1x7": 1,
    "8x7": 1,
  },
  "halfSizeBins": {},
  "layout": [
    {
      "height": 7,
      "pixelHeight": 294,
      "pixelWidth": 336,
      "pixelX": 0,
      "pixelY": 0,
      "type": "baseplate",
      "width": 8,
      "x": 0,
      "y": 0,
    },
    {
      "height": 7,
      "pixelHeight": 294,
      "pixelWidth": 42,
      "pixelX": 336,
      "pixelY": 0,
      "type": "baseplate",
      "width": 1,
      "x": 8,
      "y": 0,
    },
    {
      "height": 7,
      "pixelHeight": 294,
      "pixelWidth": 3,
      "pixelX": 378,
      "pixelY": 0,
      "type": "spacer",
      "width": 0.07,
      "x": 9,
      "y": 0,
    },
    {
      "height": 0.26,
      "pixelHeight": 10.8,
      "pixelWidth": 336,
      "pixelX": 0,
      "pixelY": 294,
      "type": "spacer",
      "width": 8,
      "x": 0,
      "y": 7,
    },
    {
      "height": 0.26,
      "pixelHeight": 10.8,
      "pixelWidth": 42,
      "pixelX": 336,
      "pixelY": 294,
      "type": "spacer",
      "width": 1,
      "x": 0,
      "y": 7,
    },
    {
      "height": 0.26,
      "pixelHeight": 10.8,
      "pixelWidth": 3,
      "pixelX": 378,
      "pixelY": 294,
      "type": "spacer",
      "width": 0.07,
      "x": 9,
      "y": 7,
    },
  ],
  "spacers": {
    "2.94mm x 10.92mm": 1,
    "2.94mm x 294mm": 1,
    "336mm x 10.92mm": 1,
    "42mm x 10.92mm": 1,
  },
}
`;

exports[`gridfinityUtils - Snapshot Tests > Standard configurations snapshots > should match snapshot for metric drawer 1`] = `
{
  "baseplates": {
    "5x3": 1,
    "5x6": 1,
    "6x3": 1,
    "6x6": 1,
  },
  "halfSizeBins": {},
  "layout": [
    {
      "height": 6,
      "pixelHeight": 252,
      "pixelWidth": 252,
      "pixelX": 0,
      "pixelY": 0,
      "type": "baseplate",
      "width": 6,
      "x": 0,
      "y": 0,
    },
    {
      "height": 6,
      "pixelHeight": 252,
      "pixelWidth": 210,
      "pixelX": 252,
      "pixelY": 0,
      "type": "baseplate",
      "width": 5,
      "x": 6,
      "y": 0,
    },
    {
      "height": 3,
      "pixelHeight": 126,
      "pixelWidth": 252,
      "pixelX": 0,
      "pixelY": 252,
      "type": "baseplate",
      "width": 6,
      "x": 0,
      "y": 6,
    },
    {
      "height": 3,
      "pixelHeight": 126,
      "pixelWidth": 210,
      "pixelX": 252,
      "pixelY": 252,
      "type": "baseplate",
      "width": 5,
      "x": 6,
      "y": 6,
    },
    {
      "height": 6,
      "pixelHeight": 252,
      "pixelWidth": 38,
      "pixelX": 462,
      "pixelY": 0,
      "type": "spacer",
      "width": 0.9,
      "x": 11,
      "y": 0,
    },
    {
      "height": 3,
      "pixelHeight": 126,
      "pixelWidth": 38,
      "pixelX": 462,
      "pixelY": 252,
      "type": "spacer",
      "width": 0.9,
      "x": 11,
      "y": 0,
    },
    {
      "height": 0.52,
      "pixelHeight": 22,
      "pixelWidth": 252,
      "pixelX": 0,
      "pixelY": 378,
      "type": "spacer",
      "width": 6,
      "x": 0,
      "y": 9,
    },
    {
      "height": 0.52,
      "pixelHeight": 22,
      "pixelWidth": 210,
      "pixelX": 252,
      "pixelY": 378,
      "type": "spacer",
      "width": 5,
      "x": 0,
      "y": 9,
    },
    {
      "height": 0.52,
      "pixelHeight": 22,
      "pixelWidth": 38,
      "pixelX": 462,
      "pixelY": 378,
      "type": "spacer",
      "width": 0.9,
      "x": 11,
      "y": 9,
    },
  ],
  "spacers": {
    "210mm x 21.84mm": 1,
    "252mm x 21.84mm": 1,
    "37.8mm x 126mm": 1,
    "37.8mm x 21.84mm": 1,
    "37.8mm x 252mm": 1,
  },
}
`;

exports[`gridfinityUtils - Snapshot Tests > Standard configurations snapshots > should match snapshot for small printer 1`] = `
{
  "baseplates": {
    "3x1": 3,
    "3x3": 6,
  },
  "halfSizeBins": {},
  "layout": [
    {
      "height": 3,
      "pixelHeight": 126,
      "pixelWidth": 126,
      "pixelX": 0,
      "pixelY": 0,
      "type": "baseplate",
      "width": 3,
      "x": 0,
      "y": 0,
    },
    {
      "height": 3,
      "pixelHeight": 126,
      "pixelWidth": 126,
      "pixelX": 126,
      "pixelY": 0,
      "type": "baseplate",
      "width": 3,
      "x": 3,
      "y": 0,
    },
    {
      "height": 3,
      "pixelHeight": 126,
      "pixelWidth": 126,
      "pixelX": 252,
      "pixelY": 0,
      "type": "baseplate",
      "width": 3,
      "x": 6,
      "y": 0,
    },
    {
      "height": 3,
      "pixelHeight": 126,
      "pixelWidth": 126,
      "pixelX": 0,
      "pixelY": 126,
      "type": "baseplate",
      "width": 3,
      "x": 0,
      "y": 3,
    },
    {
      "height": 3,
      "pixelHeight": 126,
      "pixelWidth": 126,
      "pixelX": 126,
      "pixelY": 126,
      "type": "baseplate",
      "width": 3,
      "x": 3,
      "y": 3,
    },
    {
      "height": 3,
      "pixelHeight": 126,
      "pixelWidth": 126,
      "pixelX": 252,
      "pixelY": 126,
      "type": "baseplate",
      "width": 3,
      "x": 6,
      "y": 3,
    },
    {
      "height": 1,
      "pixelHeight": 42,
      "pixelWidth": 126,
      "pixelX": 0,
      "pixelY": 252,
      "type": "baseplate",
      "width": 3,
      "x": 0,
      "y": 6,
    },
    {
      "height": 1,
      "pixelHeight": 42,
      "pixelWidth": 126,
      "pixelX": 126,
      "pixelY": 252,
      "type": "baseplate",
      "width": 3,
      "x": 3,
      "y": 6,
    },
    {
      "height": 1,
      "pixelHeight": 42,
      "pixelWidth": 126,
      "pixelX": 252,
      "pixelY": 252,
      "type": "baseplate",
      "width": 3,
      "x": 6,
      "y": 6,
    },
    {
      "height": 3,
      "pixelHeight": 126,
      "pixelWidth": 3,
      "pixelX": 378,
      "pixelY": 0,
      "type": "spacer",
      "width": 0.07,
      "x": 9,
      "y": 0,
    },
    {
      "height": 3,
      "pixelHeight": 126,
      "pixelWidth": 3,
      "pixelX": 378,
      "pixelY": 126,
      "type": "spacer",
      "width": 0.07,
      "x": 9,
      "y": 0,
    },
    {
      "height": 1,
      "pixelHeight": 42,
      "pixelWidth": 3,
      "pixelX": 378,
      "pixelY": 252,
      "type": "spacer",
      "width": 0.07,
      "x": 9,
      "y": 0,
    },
    {
      "height": 0.26,
      "pixelHeight": 10.8,
      "pixelWidth": 126,
      "pixelX": 0,
      "pixelY": 294,
      "type": "spacer",
      "width": 3,
      "x": 0,
      "y": 7,
    },
    {
      "height": 0.26,
      "pixelHeight": 10.8,
      "pixelWidth": 126,
      "pixelX": 126,
      "pixelY": 294,
      "type": "spacer",
      "width": 3,
      "x": 0,
      "y": 7,
    },
    {
      "height": 0.26,
      "pixelHeight": 10.8,
      "pixelWidth": 126,
      "pixelX": 252,
      "pixelY": 294,
      "type": "spacer",
      "width": 3,
      "x": 0,
      "y": 7,
    },
    {
      "height": 0.26,
      "pixelHeight": 10.8,
      "pixelWidth": 3,
      "pixelX": 378,
      "pixelY": 294,
      "type": "spacer",
      "width": 0.07,
      "x": 9,
      "y": 7,
    },
  ],
  "spacers": {
    "126mm x 10.92mm": 3,
    "2.94mm x 10.92mm": 1,
    "2.94mm x 126mm": 2,
    "2.94mm x 42mm": 1,
  },
}
`;

exports[`gridfinityUtils - Snapshot Tests > Standard configurations snapshots > should match snapshot for standard US drawer 1`] = `
{
  "baseplates": {
    "1x3": 1,
    "1x6": 1,
    "6x3": 2,
    "6x6": 2,
  },
  "halfSizeBins": {},
  "layout": [
    {
      "height": 6,
      "pixelHeight": 252,
      "pixelWidth": 252,
      "pixelX": 0,
      "pixelY": 0,
      "type": "baseplate",
      "width": 6,
      "x": 0,
      "y": 0,
    },
    {
      "height": 6,
      "pixelHeight": 252,
      "pixelWidth": 252,
      "pixelX": 252,
      "pixelY": 0,
      "type": "baseplate",
      "width": 6,
      "x": 6,
      "y": 0,
    },
    {
      "height": 6,
      "pixelHeight": 252,
      "pixelWidth": 42,
      "pixelX": 504,
      "pixelY": 0,
      "type": "baseplate",
      "width": 1,
      "x": 12,
      "y": 0,
    },
    {
      "height": 3,
      "pixelHeight": 126,
      "pixelWidth": 252,
      "pixelX": 0,
      "pixelY": 252,
      "type": "baseplate",
      "width": 6,
      "x": 0,
      "y": 6,
    },
    {
      "height": 3,
      "pixelHeight": 126,
      "pixelWidth": 252,
      "pixelX": 252,
      "pixelY": 252,
      "type": "baseplate",
      "width": 6,
      "x": 6,
      "y": 6,
    },
    {
      "height": 3,
      "pixelHeight": 126,
      "pixelWidth": 42,
      "pixelX": 504,
      "pixelY": 252,
      "type": "baseplate",
      "width": 1,
      "x": 12,
      "y": 6,
    },
    {
      "height": 6,
      "pixelHeight": 252,
      "pixelWidth": 25.5,
      "pixelX": 546,
      "pixelY": 0,
      "type": "spacer",
      "width": 0.61,
      "x": 13,
      "y": 0,
    },
    {
      "height": 3,
      "pixelHeight": 126,
      "pixelWidth": 25.5,
      "pixelX": 546,
      "pixelY": 252,
      "type": "spacer",
      "width": 0.61,
      "x": 13,
      "y": 0,
    },
    {
      "height": 0.98,
      "pixelHeight": 41.1,
      "pixelWidth": 252,
      "pixelX": 0,
      "pixelY": 378,
      "type": "spacer",
      "width": 6,
      "x": 0,
      "y": 9,
    },
    {
      "height": 0.98,
      "pixelHeight": 41.1,
      "pixelWidth": 252,
      "pixelX": 252,
      "pixelY": 378,
      "type": "spacer",
      "width": 6,
      "x": 0,
      "y": 9,
    },
    {
      "height": 0.98,
      "pixelHeight": 41.1,
      "pixelWidth": 42,
      "pixelX": 504,
      "pixelY": 378,
      "type": "spacer",
      "width": 1,
      "x": 0,
      "y": 9,
    },
    {
      "height": 0.98,
      "pixelHeight": 41.1,
      "pixelWidth": 25.5,
      "pixelX": 546,
      "pixelY": 378,
      "type": "spacer",
      "width": 0.61,
      "x": 13,
      "y": 9,
    },
  ],
  "spacers": {
    "25.62mm x 126mm": 1,
    "25.62mm x 252mm": 1,
    "25.62mm x 41.16mm": 1,
    "252mm x 41.16mm": 2,
    "42mm x 41.16mm": 1,
  },
}
`;

exports[`gridfinityUtils - Snapshot Tests > Standard configurations snapshots > should match snapshot with half-size bins enabled 1`] = `
{
  "baseplates": {},
  "halfSizeBins": {
    "3x9": 1,
    "9x9": 1,
  },
  "layout": [
    {
      "height": 9,
      "pixelHeight": 189,
      "pixelWidth": 189,
      "pixelX": 0,
      "pixelY": 0,
      "type": "half-size",
      "width": 9,
      "x": 0,
      "y": 0,
    },
    {
      "height": 9,
      "pixelHeight": 189,
      "pixelWidth": 63,
      "pixelX": 189,
      "pixelY": 0,
      "type": "half-size",
      "width": 3,
      "x": 9,
      "y": 0,
    },
    {
      "height": 4.5,
      "pixelHeight": 189,
      "pixelWidth": 2,
      "pixelX": 252,
      "pixelY": 0,
      "type": "spacer",
      "width": 0.05,
      "x": 12,
      "y": 0,
    },
    {
      "height": 0.34,
      "pixelHeight": 14.2,
      "pixelWidth": 189,
      "pixelX": 0,
      "pixelY": 189,
      "type": "spacer",
      "width": 4.5,
      "x": 0,
      "y": 9,
    },
    {
      "height": 0.34,
      "pixelHeight": 14.2,
      "pixelWidth": 63,
      "pixelX": 189,
      "pixelY": 189,
      "type": "spacer",
      "width": 1.5,
      "x": 0,
      "y": 9,
    },
    {
      "height": 0.34,
      "pixelHeight": 14.2,
      "pixelWidth": 2,
      "pixelX": 252,
      "pixelY": 189,
      "type": "spacer",
      "width": 0.05,
      "x": 12,
      "y": 9,
    },
  ],
  "spacers": {
    "1.05mm x 7.14mm": 1,
    "1.05mm x 94.5mm": 1,
    "31.5mm x 7.14mm": 1,
    "94.5mm x 7.14mm": 1,
  },
}
`;

exports[`gridfinityUtils - Snapshot Tests > Standard configurations snapshots > should match snapshot with prefer half-size 1`] = `
{
  "baseplates": {
    "2x4": 1,
    "4x4": 1,
  },
  "halfSizeBins": {
    "2x0.5": 1,
    "4x0.5": 1,
  },
  "layout": [
    {
      "height": 4,
      "pixelHeight": 168,
      "pixelWidth": 168,
      "pixelX": 0,
      "pixelY": 0,
      "type": "baseplate",
      "width": 4,
      "x": 0,
      "y": 0,
    },
    {
      "height": 4,
      "pixelHeight": 168,
      "pixelWidth": 84,
      "pixelX": 168,
      "pixelY": 0,
      "type": "baseplate",
      "width": 2,
      "x": 4,
      "y": 0,
    },
    {
      "height": 0.5,
      "pixelHeight": 21,
      "pixelWidth": 168,
      "pixelX": 0,
      "pixelY": 168,
      "type": "half-size",
      "width": 4,
      "x": 0,
      "y": 4,
    },
    {
      "height": 0.5,
      "pixelHeight": 21,
      "pixelWidth": 84,
      "pixelX": 168,
      "pixelY": 168,
      "type": "half-size",
      "width": 2,
      "x": 0,
      "y": 4,
    },
    {
      "height": 4,
      "pixelHeight": 168,
      "pixelWidth": 2,
      "pixelX": 252,
      "pixelY": 0,
      "type": "spacer",
      "width": 0.05,
      "x": 6,
      "y": 0,
    },
    {
      "height": 0.34,
      "pixelHeight": 14.2,
      "pixelWidth": 168,
      "pixelX": 0,
      "pixelY": 189,
      "type": "spacer",
      "width": 4,
      "x": 0,
      "y": 4,
    },
    {
      "height": 0.34,
      "pixelHeight": 14.2,
      "pixelWidth": 84,
      "pixelX": 168,
      "pixelY": 189,
      "type": "spacer",
      "width": 2,
      "x": 0,
      "y": 4,
    },
    {
      "height": 0.84,
      "pixelHeight": 35.2,
      "pixelWidth": 2,
      "pixelX": 252,
      "pixelY": 168,
      "type": "spacer",
      "width": 0.05,
      "x": 6,
      "y": 4,
    },
    {
      "height": 0.34,
      "pixelHeight": 14.2,
      "pixelWidth": 0,
      "pixelX": 252,
      "pixelY": 189,
      "type": "spacer",
      "width": 0,
      "x": 6,
      "y": 4,
    },
  ],
  "spacers": {
    "0mm x 14.28mm": 1,
    "168mm x 14.28mm": 1,
    "2.1mm x 168mm": 1,
    "2.1mm x 35.28mm": 1,
    "84mm x 14.28mm": 1,
  },
}
`;
